<resources>
    <string name="app_name">calculatorinator</string>
    <string name="c">C</string>
    <string name="plusminus">+/-</string>
    <string name="percent">%</string>
    <string name="divide">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">*</string>
    <string name="minus">-</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="decimal">.</string>
    <string name="equals">=</string>
    <string name="_0_0">0,0</string>
    <string name="mc">MC</string>
    <string name="mplus">M+</string>
    <string name="mminus">M-</string>
    <string name="mr">MR</string>
    <string name="sin">Sin</string>
    <string name="cos">Cos</string>
    <string name="tan">Tan</string>
    <string name="xwhat">x!</string>
    <string name="asin">ASin</string>
    <string name="acos">ACos</string>
    <string name="atan">ATan</string>
    <string name="xwhaty">1/x</string>
    <string name="x2">x2</string>
    <string name="x3">x3</string>
    <string name="sqrt">sqrt</string>
    <string name="e">e</string>
    <string name="lint">Int</string>
    <string name="bin">Bin</string>
    <string name="hex">Hex</string>
    <string name="pi">Pi</string>
</resources>