<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7A7A7A"
    tools:context=".MainActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="end"
            android:text="@string/_0_0"
            android:background="#FFF496"
            android:textSize="40sp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:id="@+id/screen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:columnCount="4"
        android:rowCount="5"
        android:useDefaultMargins="true"
        android:alignmentMode="alignMargins"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/c"
            android:textSize="24sp"
            android:background="@color/grey"
            android:fontFamily="sans-serif"
            android:id="@+id/btnClear"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/plusminus"
            android:textSize="24sp"
            android:background="@color/grey"
            android:fontFamily="sans-serif"
            android:id="@+id/btnPlusMinus"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/percent"
            android:textSize="24sp"
            android:background="@color/grey"
            android:fontFamily="sans-serif"
            android:id="@+id/btnPercent"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/divide"
            android:textSize="24sp"
            android:background="@color/grey"
            android:fontFamily="sans-serif"
            android:id="@+id/btnDivide"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/seven"
            android:textSize="24sp"
            android:background="@color/grey"
            android:fontFamily="sans-serif"
            android:id="@+id/btn7"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/eight"
            android:textSize="24sp"
            android:background="@color/grey"
            android:fontFamily="sans-serif"
            android:id="@+id/btn8"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/nine"
            android:textSize="24sp"
            android:background="@color/grey"
            android:fontFamily="sans-serif"
            android:id="@+id/btn9"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/multiply"
            android:textSize="24sp"
            android:background="@color/grey"
            android:fontFamily="sans-serif"
            android:id="@+id/btnTimes"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/four"
            android:textSize="24sp"
            android:background="@color/grey"
            android:fontFamily="sans-serif"
            android:id="@+id/btn4"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/five"
            android:textSize="24sp"
            android:background="@color/grey"
            android:fontFamily="sans-serif"
            android:id="@+id/btn5"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/six"
            android:textSize="24sp"
            android:background="@color/grey"
            android:fontFamily="sans-serif"
            android:id="@+id/btn6"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/minus"
            android:textSize="24sp"
            android:background="@color/grey"
            android:fontFamily="sans-serif"
            android:id="@+id/btnMinus"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/one"
            android:textSize="24sp"
            android:background="@color/grey"
            android:fontFamily="sans-serif"
            android:id="@+id/btn1"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/two"
            android:textSize="24sp"
            android:background="@color/grey"
            android:fontFamily="sans-serif"
            android:id="@+id/btn2"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/three"
            android:textSize="24sp"
            android:background="@color/grey"
            android:fontFamily="sans-serif"
            android:id="@+id/btn3"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/plus"
            android:textSize="24sp"
            android:background="@color/grey"
            android:fontFamily="sans-serif"
            android:id="@+id/btnPlus"
            />
        <Button
            android:layout_width="180dp"
            android:layout_height="100dp"
            android:text="@string/zero"
            android:textSize="24sp"
            android:background="@color/grey"
            android:fontFamily="sans-serif"
            android:id="@+id/btn0"
            android:layout_columnSpan="2"
            android:layout_gravity="center|top"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/decimal"
            android:textSize="24sp"
            android:background="@color/grey"
            android:fontFamily="sans-serif"
            android:id="@+id/btnDecimal"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/equals"
            android:textSize="24sp"
            android:background="@color/grey"
            android:fontFamily="sans-serif"
            android:id="@+id/btnEquals"
            />
    </GridLayout>
</LinearLayout>